samples/_failures_safe/1761170562_edf059_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe90bfd6.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_fe90bfd6.c:145:9: error: expected ‘:’ or ‘...’ at end of input
  145 |         case DFS
      |         ^~~~
./samples/SAFE/__tmp_fe90bfd6.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe90bfd6.c:145:9: error: expected declaration or statement at end of input
